@@ -74,7 +74,7 @@ All handlers are deleted on object deletion.
 
 \membersection{wxHtmlParser::AddText}\label{wxhtmlparseraddword}
 
-\func{virtual void}{AddWord}{\param{const char* }{txt}}
+\func{virtual void}{AddWord}{\param{const wxString\& }{txt}}
 
 Must be overwritten in derived class.
 
